# adfotg

./: .babelrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDITS.txt  HARDWARE_DAMAGE_RISK.txt  LICENSE  MANIFEST.in  Makefile  README.md  babel.config.json  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tsconfig.app.json  tsconfig.json  vite.config.ts  webpack.common.js  webpack.config.js  webpack.release.config.js  webpack.release.js
adfotg/: __init__.py  adf.py  adfotg.conf  api.py  apidoc.py  apiutil.py  cli.py  config.py  error.py  mountimg.py  os_install.py  selfcheck.py  server.py  storage.py  util.py  version.py
adfotg/adf/: __init__.py  api.py
adfotg/mount/: __init__.py  api.py
adfotg/mountimg/: api.py
adfotg/quickmount/: api.py
adfotg/selfcheck/: __init__.py  api.py
adfotg/upload/: api.py
site/: Actions.tsx  AdfWizard.tsx  App.tsx  FileTable.tsx  Form.tsx  Health.tsx  Home.tsx  ImageLibrary.tsx  Listing.tsx  Modal.tsx  Mount.tsx  Notifier.tsx  Overlay.tsx  Pager.tsx  Search.tsx  Section.tsx  Title.tsx  Uploader.tsx  enum.ts  index.html  index.tsx  res.ts  res.tsx  responsive.less  responsive.ts  routes.ts  routes.tsx  skin.less  skin.ts  strings.ts  style.less  style.less.d.ts  ui.tsx
site/amiga-topaz/: readme.txt
site/app/: Listing.ts  Storage.ts
site/component/: Actions.less  Actions.less.d.ts  Actions.tsx  FileTable.tsx  FileTables.tsx  Form.tsx  GuruFrame.tsx  Listing.tsx  Modal.tsx  MountImage.tsx  Notifier.tsx  Pager.less  Pager.less.d.ts  Pager.tsx  Search.tsx  Section.tsx  StorageTables.tsx  Uploader.tsx  ui.tsx
site/container/: AdfWizard.tsx  App.tsx  Health.tsx  (+12 more)
webui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+69 files in other folders)
