[metadata]
name = adfotg
description = ADF On-The-Go - convert your RPi Zero to Gotek-ready USB disk
long_description = file: README.md
long_description_content_type = text/markdown
author = Robikz
author_email = zalewapl@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/Zalewa/adfotg

[options]
include_package_data = True
install_requires =
    Flask==2.1.*
    werkzeug~=2.0
    importlib-metadata>=3.0, <7.0; python_version < '3.8.1'
packages = find:
package_dir =
    = src
python_requires = >=3.5
setup_requires =
    setuptools_scm==5.*
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    adfotg = adfotg.cli:main
    adfotg-xdftool = adfotg.amitools.tools.xdftool:main
